add kube functions
